--- a/Letters.css
+++ b/Letters.css
@@ -107,16 +107,23 @@ body {
   transform: translateY(0);
   pointer-events: auto;
 }
+.myName{
+  width: 47vh;
+  margin-left: 65%;
+  margin-top: 20vh;
+}
 .FirstName{
   color: #6b04f3;
-  font-size: 150px; /* Big letter */
+  font-size: 180px; /* Big letter */
   font-weight: 900;
+  font-family: Comic Sans MS;
 }
 .SecondName{
   color:#6b04f3;
-  font-size: 150px; /* Big letter */
+  font-size: 180px; /* Big letter */
   font-weight: 900;
-  margin-bottom: 2vh;
+  font-family: Comic Sans MS;
+  margin-left: 25vh
 }
 
 
